--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "opportfolio",
-  "homepage": "https://shivam-me.github.io/personal_portfolio/",
+  "homepage": "http://hrishi.tech/",
   "version": "1.2.0",
   "scripts": {
     "build": "react-scripts build",
@@ -15,6 +15,7 @@
     "baseui": "^9.109.0",
     "bootstrap": "^4.6.0",
     "fs": "0.0.1-security",
+    "gh-pages": "^3.1.0",
     "glamor": "^2.20.40",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
@@ -37,7 +38,6 @@
   "devDependencies": {
     "@iconify/icons-logos": "^1.1.5",
     "@iconify/react": "^1.1.3",
-    "gh-pages": "^3.1.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1"
